--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <a-scene>
-      <a-sphere position="0 1.25 -1" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cube position="-1 0.5 1" rotation="0 45 0" width="1" height="1" depth="1"  color="#4CC3D9"></a-cube>
-      <a-cylinder position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-camera fov="80" position="0 1.8 0" near="0.2" cursor-color="#33CCFF"></a-camera>
 
-      <a-sky color="#ECECEC"></a-sky>
+  <a-curvedimage src="images/ui/1.png" radius="5.7" theta-length="72" height="2.6" rotation="0 -45 0" position="0 1.7 1"  scale="0.6 0.6 0.6"></a-curvedimage>
+  <a-curvedimage src="images/ui/2.png" radius="5.7" theta-length="72" height="3.02" rotation="0 100 0" position="0.2 1.7 0" scale="0.8 0.8 0.8"></a-curvedimage>
+
+
+  <a-sky color="#008080"></a-sky>
     </a-scene>
   </body>
 </html>
